# A

./: LICENSE  README.md  package-lock.json
collabowl-backend/: Cargo.toml  package-lock.json  package.json
collabowl-backend/src/: auth.rs  main.rs  models.rs
my-app/: package-lock.json  package.json  tailwind.config.js
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/login/: page.tsx
my-app/app/register/: page.tsx
my-app/components/Helper/: SectionHeading.tsx  themeToggle.tsx
my-app/components/Hoc/: Provider.tsx
my-app/components/Home/: Features.tsx  Hero.tsx  Home.tsx
my-app/components/Home/Footer/: Footer.tsx
my-app/components/Home/Navbar/: MovilNav.tsx  Nav.tsx  ResponsiveNav.tsx
my-app/components/Home/Price/: Price.tsx  PriceCard.tsx  PriceData.tsx
my-app/components/Home/Review/: Review.tsx  ReviewCard.tsx
my-app/components/Register/: Register.tsx
my-app/constant/: constant.ts
